# audit-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  build-start-docker.sh  docker-compose.yml  pyproject.toml  start.sh
backend/: requirements.txt  run_task.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: dashboard.py  repos.py  tasks.py
backend/app/services/: git_service.py  scanner.py  scheduler.py  skill_service.py  task_runner.py
backend/app/utils/: crypto.py
docker/: Dockerfile  docker-start.sh
docs/: github.md  gitlab.md  install.md
example/: audit-pr.sh  audit-security.sh  curl.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/pages/: Dashboard.tsx  Repositories.tsx  TaskDetail.tsx
skills/code-review/: SKILL.md
skills/code-review/references/: CODE_REVIEW_CHECKLIST.md
skills/code-review/resources/: review_report_template.md
src/audit_service/: auditor.py  auth.py  config.py  html_converter.py  main.py  md_merge_converter.py  skill_loader.py
tests/: test_api.py  test_auditor.py  test_auth.py  test_pr_audit.py  test_skill_loader.py
tools/: gen_api_key.py  md2html.py
