[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit-service"
version = "0.1.0"
description = "Code audit service powered by Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "claude-code-sdk>=0.0.20",
    "markdown2>=2.5.0",
    "python-frontmatter>=1.1.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
